syntax = "proto3";

package wso2.discovery.config.enforcer;

import "wso2/discovery/config/enforcer/cert.proto";
import "wso2/discovery/config/enforcer/service.proto";
import "wso2/discovery/config/enforcer/jwt_generator.proto";
import "wso2/discovery/config/enforcer/jwt_issuer.proto";
import "wso2/discovery/config/enforcer/throttling.proto";
import "wso2/discovery/config/enforcer/cache.proto";
import "wso2/discovery/config/enforcer/analytics.proto";
import "wso2/discovery/config/enforcer/security.proto";
import "wso2/discovery/config/enforcer/management.proto";
import "wso2/discovery/config/enforcer/rest_server.proto";
import "wso2/discovery/config/enforcer/filter.proto";
import "wso2/discovery/config/enforcer/tracing.proto";
import "wso2/discovery/config/enforcer/metrics.proto";
import "wso2/discovery/config/enforcer/mcp.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.choreo.connect.discovery.config.enforcer";
option java_outer_classname = "ConfigProto";
option java_multiple_files = true;

// [#protodoc-title: Config]

// Enforcer config model
message Config {
    Security security = 1;

    CertStore keystore = 2;

    CertStore truststore = 3;

    Service authService = 4;

    JWTGenerator jwtGenerator = 5;

    Throttling throttling = 6;

    Cache cache = 7;

    JWTIssuer jwtIssuer = 8;

    Analytics analytics = 9;

    Management management = 10;

    RestServer restServer = 11;

    Tracing tracing = 12;

    Metrics metrics = 13;

    repeated Filter filters = 14;

    Mcp mcp = 15;
}
