// Copyright (c) 2025, WSO2 LLC. (http://www.wso2.com).
//
// WSO2 LLC. licenses this file to you under the Apache License,
// Version 2.0 (the "License"); you may not use this file except
// in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package wso2.discovery.config.enforcer;

import "wso2/discovery/config/enforcer/service.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.choreo.connect.discovery.config.enforcer";
option java_outer_classname = "McpConfigProto";
option java_multiple_files = true;

message Mcp {
    // MCP transform service URL
    string serviceUrl = 1;
    // MCP HTTP client pool size
    int32 poolSize = 2;
    // MCP HTTP client connection timeout
    int32 connectionTimeout = 3;
    // MCP HTTP client waiting for a connection timeout
    int32 connectionRequestTimeout = 4;
    // // MCP HTTP client socket timeout
    int32 socketTimeout = 5;
}
