syntax = "proto3";

package wso2.discovery.config.enforcer;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.choreo.connect.discovery.config.enforcer";
option java_outer_classname = "CacheProto";
option java_multiple_files = true;

// [#protodoc-title: Cache]

// JWT Generator model
message Cache {
    bool enable = 1;

    int32 maximumSize = 2;

    sint32 expiryTime = 3;
}
